{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "8a58b17b-a5ad-481a-b3b0-6ab1f08a3423",
            "actions": [
                {
                    "name": "PressTouch",
                    "type": "PassThrough",
                    "id": "3ef273c9-4afb-4454-9c30-d6593773dff2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ReleaseTouch",
                    "type": "PassThrough",
                    "id": "d22c05cf-f152-49ca-b4e5-f8ac8746b97c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "HoldTouch",
                    "type": "PassThrough",
                    "id": "3c4d4f3f-64e1-4d8a-a08d-e7ac88934cb6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "65377f9e-b6f6-4b3e-9b6f-b085315743b9",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchcreen",
                    "action": "PressTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f6a8d7f-67f6-41db-9f93-58b5dcc8362b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchcreen",
                    "action": "PressTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6c6ef50-3ead-4bd9-b346-34cd642a7c02",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Standalone",
                    "action": "PressTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb41a2cd-94dd-4c25-b271-73b5fab66bc5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Standalone",
                    "action": "PressTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f83c067a-4c9c-41a5-89dd-9e0d0db6b620",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchcreen",
                    "action": "ReleaseTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39fe0749-541a-4a34-a274-b4b900a5029b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchcreen",
                    "action": "ReleaseTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9405a4cf-b4f5-43ab-af21-10abd851b1fc",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Standalone",
                    "action": "ReleaseTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f30dcd0-1db2-423f-aa55-c32375c618a2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Standalone",
                    "action": "ReleaseTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fda88a45-1ebb-4af9-a911-f26171ab13dd",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchcreen",
                    "action": "HoldTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eaa378ce-45a7-4c9d-bc4a-4253692c21b5",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Standalone",
                    "action": "HoldTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff5a0650-62a4-4c7b-95a6-10e9ca276ad7",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchcreen",
                    "action": "HoldTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MobileTouchcreen",
            "bindingGroup": "MobileTouchcreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "PC Standalone",
            "bindingGroup": "PC Standalone",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}